logs/validate.20260408-060227.log
Mode: isolate
Isolate: including Chap19 Chap28 Chap02
error: expected `by`
   --> src/Chap28/MaxContigSubSumDivConStEph.rs:336:17
    |
336 |                 lemma_sums_fit_subseq(a.seq@, left.seq@, 0);
    |                 ^^^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved import `crate::Chap28::MaxContigSubSumDivConStEph::MaxContigSubSumDivConStEph::lemma_divcon_combine`
  --> src/Chap28/MaxContigSubSumDivConMtEph.rs:25:9
   |
25 |     use crate::Chap28::MaxContigSubSumDivConStEph::MaxContigSubSumDivConStEph::lemma_divcon_combine;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_divcon_combine` in `Chap28::MaxContigSubSumDivConStEph::MaxContigSubSumDivConStEph`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 24189MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
